2004-11-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-prepare-article): Break
	continuous lines in editorials.

2004-11-21  Tsuyoshi CHO  <mfalcon21@hotmail.com>

	* shimbun/sb-wikimedia.el: New file.

2004-11-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-rss.el: New file.

	* w3m-antenna.el (w3m-antenna-check-rss): New function.
	(w3m-antenna-sites): Improve its customize spec to support
	`w3m-antenna-check-rss'.

	* w3m.el (w3m-content-type-alist): Add text/xml, application/xml,
	application/rdf+xml, and application/rss+xml.
	(w3m-detect-xml-charset): New function.
	(w3m-decode-buffer): Use the above function when decoding XML
	contents.

	* shimbun/sb-rss.el (shimbun-rss-process-date): Accept minus sign
	character for time zone.

2004-11-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-redisplay-this-page): Don't make a new history.

2004-11-17  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* w3m.el (w3m-output-coding-system): Use `utf-8' if Emacs has
	internal utf-8 only.
	(w3m-input-coding-system): Revert last change.
	(w3m-halfdump-command-arguments): Bind `fix_width_conv' and
	`use_jisx0201' when w3m-m17n.

2004-11-16  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* w3m.el (w3m-input-coding-system): Use `utf-8' if Emacs has
	internal utf-8, it has no Mule-UCS and w3m-type is `w3m-m17n'.

2004-11-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el (shimbun-mainichi-prepare-article): Break
	continuous lines in editorials.

	* w3m-form.el (w3m-char-to-int, w3m-string-to-char-list,
	w3m-int-to-char): Silence byte-compiler.
	* w3m-ccl.el (charset-id): Ditto.

	* w3m-tabmenu.el (w3m-tab-menubar-update): Don't let iswitchb
	manage the w3m tab menubar.

2004-11-02  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-hns.el (shimbun-hns-article): Support tdiary-hns-theme.

2004-10-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-break-long-japanese-lines): New function.